Modificando el html de la rama

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="css/estilos.css"/>
 </head>
 <body>
+    <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
+    </div>
+
+    <div id="post">
+        <h1>
+            Ya soy pro xd
+        </h1>
+
+    </div>
+
     <h1>Este es el blog hacker pro xD</h1>
     <p>Coco es un chimimi :0</p>
 </body>
