Modificando el html de la rama para despues regresar al pasado

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
 
     <div id="post">
         <h1>
-            Ya soy pro xd
+            Esta es la modificacion de donde partire al pasado para probar 
         </h1>
 
     </div>
