Iniciandole a poner estilos descentes al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,13 @@
 
     <div id="post">
         <h1>
-            Esta es la modificacion de donde partire al pasado para probar 
+            Esta es la modificacion de donde partire al pasado para probar,
+            como tip te paso este git cheackout cabecera : regresar a la rama cabecera en su ultimo commit
+
+            <p>
+                Ahora bien  Aqui te taigo otro tip xD con git pull   : hace lo mismo que git fetch y merge, 
+                para que estes al corriente con lo que paso en el repositorio remoto
+            </p>
         </h1>
 
     </div>
