--- a/blogpost.html
+++ b/blogpost.html
@@ -22,11 +22,16 @@
                 Ahora bien  Aqui te taigo otro tip xD con git pull   : hace lo mismo que git fetch y merge, 
                 para que estes al corriente con lo que paso en el repositorio remoto
             </p>
+            <p>
+                Este es un parrafo adicional 
+                git fetch  : Agrego una actualizacion del repositorio al repositorio de tu compu 
+        git merge : Fusiona el repositorio remoto con tu compu
+            </p>
         </h1>
 
     </div>
 
     <h1>Este es el blog hacker pro xD</h1>
-    <p>Coco es un chimimi :0</p>
+    <p>Coco es un chimimi :o</p>
 </body>
 </html>
