Se le agrego  lucho esta mamadisimo al master

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Este es el blog hacker pro xD</h1>
     <p>Coco es un chimimi :0</p>
+    <p>Lucho esta mamadisimo </p>
 </body>
 </html>
