Probando cambios desde Github
agregue    <p> Y Rex es mi bebeSauri </p> en la linea 37

--- a/blogpost.html
+++ b/blogpost.html
@@ -32,6 +32,7 @@
     </div>
 
     <h1>Este es el blog hacker pro xD</h1>
-    <p>Coco es un chimimi :o</p>
+    <p>Coco es un chimimi :oo</p>
+    <p> Y Rex es mi bebeSauri </p>
 </body>
 </html>
