--- a/blogpost.html
+++ b/blogpost.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El blog hacker </title>
+    <title> IsraHackeman</title>
     <link rel="stylesheet" href="css/estilos.css"/>
 </head>
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Blog vinculado a Github con SSH 
         </div>
     </div>
 
